Bug 237776 Replace URL by URI