@@ -12,8 +12,8 @@
 package org.eclipse.equinox.p2.tests.artifact.repository;
 
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
 import java.util.Map;
 import org.eclipse.core.runtime.NullProgressMonitor;
@@ -30,14 +30,14 @@ import org.osgi.framework.Version;
 public class SimpleArtifactRepositoryTest extends AbstractProvisioningTest {
 	//artifact repository to remove on tear down
 	private File repositoryFile = null;
-	private URL repositoryURL = null;
+	private URI repositoryURI = null;
 
 	protected void tearDown() throws Exception {
 		super.tearDown();
 		//repository location is not used by all tests
-		if (repositoryURL != null) {
-			getArtifactRepositoryManager().removeRepository(repositoryURL);
-			repositoryURL = null;
+		if (repositoryURI != null) {
+			getArtifactRepositoryManager().removeRepository(repositoryURI);
+			repositoryURI = null;
 		}
 		if (repositoryFile != null) {
 			delete(repositoryFile);
@@ -45,45 +45,45 @@ public class SimpleArtifactRepositoryTest extends AbstractProvisioningTest {
 		}
 	}
 
-	public void testGetActualLocation1() throws MalformedURLException {
-		URL base = new URL("http://localhost/artifactRepository");
-		assertEquals(new URL(base + "/artifacts.xml"), SimpleArtifactRepository.getActualLocation(base, false));
+	public void testGetActualLocation1() throws URISyntaxException {
+		URI base = new URI("http://localhost/artifactRepository");
+		assertEquals(new URI(base + "/artifacts.xml"), SimpleArtifactRepository.getActualLocation(base, false));
 	}
 
-	public void testGetActualLocation2() throws MalformedURLException {
-		URL base = new URL("http://localhost/artifactRepository/");
-		assertEquals(new URL(base + "artifacts.xml"), SimpleArtifactRepository.getActualLocation(base, false));
+	public void testGetActualLocation2() throws URISyntaxException {
+		URI base = new URI("http://localhost/artifactRepository/");
+		assertEquals(new URI(base + "artifacts.xml"), SimpleArtifactRepository.getActualLocation(base, false));
 	}
 
-	public void testGetActualLocation3() throws MalformedURLException {
-		URL base = new URL("http://localhost/artifactRepository/artifacts.xml");
+	public void testGetActualLocation3() throws URISyntaxException {
+		URI base = new URI("http://localhost/artifactRepository/artifacts.xml");
 		assertEquals(base, SimpleArtifactRepository.getActualLocation(base, false));
 	}
 
-	public void testGetActualLocationCompressed1() throws MalformedURLException {
-		URL base = new URL("http://localhost/artifactRepository");
-		assertEquals(new URL(base + "/artifacts.jar"), SimpleArtifactRepository.getActualLocation(base, true));
+	public void testGetActualLocationCompressed1() throws URISyntaxException {
+		URI base = new URI("http://localhost/artifactRepository");
+		assertEquals(new URI(base + "/artifacts.jar"), SimpleArtifactRepository.getActualLocation(base, true));
 	}
 
-	public void testGetActualLocationCompressed2() throws MalformedURLException {
-		URL base = new URL("http://localhost/artifactRepository/");
-		assertEquals(new URL(base + "artifacts.jar"), SimpleArtifactRepository.getActualLocation(base, true));
+	public void testGetActualLocationCompressed2() throws URISyntaxException {
+		URI base = new URI("http://localhost/artifactRepository/");
+		assertEquals(new URI(base + "artifacts.jar"), SimpleArtifactRepository.getActualLocation(base, true));
 	}
 
-	public void testGetActualLocationCompressed3() throws MalformedURLException {
-		URL base = new URL("http://localhost/artifactRepository/artifacts.jar");
+	public void testGetActualLocationCompressed3() throws URISyntaxException {
+		URI base = new URI("http://localhost/artifactRepository/artifacts.jar");
 		assertEquals(base, SimpleArtifactRepository.getActualLocation(base, true));
 	}
 
-	public void testCompressedRepository() throws MalformedURLException, ProvisionException {
+	public void testCompressedRepository() throws URISyntaxException, ProvisionException {
 		IArtifactRepositoryManager artifactRepositoryManager = getArtifactRepositoryManager();
 		String tempDir = System.getProperty("java.io.tmpdir");
 		repositoryFile = new File(tempDir, "SimpleArtifactRepositoryTest");
 		delete(repositoryFile);
-		repositoryURL = repositoryFile.toURL();
+		repositoryURI = repositoryFile.toURI();
 		Map properties = new HashMap();
 		properties.put(IRepository.PROP_COMPRESSED, "true");
-		IArtifactRepository repo = artifactRepositoryManager.createRepository(repositoryURL, "artifact name", IArtifactRepositoryManager.TYPE_SIMPLE_REPOSITORY, properties);
+		IArtifactRepository repo = artifactRepositoryManager.createRepository(repositoryURI, "artifact name", IArtifactRepositoryManager.TYPE_SIMPLE_REPOSITORY, properties);
 
 		IArtifactKey key = PublisherHelper.createBinaryArtifactKey("testKeyId", new Version("1.2.3"));
 		IArtifactDescriptor descriptor = PublisherHelper.createArtifactDescriptor(key, null);
@@ -108,15 +108,15 @@ public class SimpleArtifactRepositoryTest extends AbstractProvisioningTest {
 			fail("Repository should not create artifact.xml");
 	}
 
-	public void testUncompressedRepository() throws MalformedURLException, ProvisionException {
+	public void testUncompressedRepository() throws URISyntaxException, ProvisionException {
 		IArtifactRepositoryManager artifactRepositoryManager = getArtifactRepositoryManager();
 		String tempDir = System.getProperty("java.io.tmpdir");
 		repositoryFile = new File(tempDir, "SimpleArtifactRepositoryTest");
 		delete(repositoryFile);
-		repositoryURL = repositoryFile.toURL();
+		repositoryURI = repositoryFile.toURI();
 		Map properties = new HashMap();
 		properties.put(IRepository.PROP_COMPRESSED, "false");
-		IArtifactRepository repo = artifactRepositoryManager.createRepository(repositoryURL, "artifact name", IArtifactRepositoryManager.TYPE_SIMPLE_REPOSITORY, properties);
+		IArtifactRepository repo = artifactRepositoryManager.createRepository(repositoryURI, "artifact name", IArtifactRepositoryManager.TYPE_SIMPLE_REPOSITORY, properties);
 
 		IArtifactKey key = PublisherHelper.createBinaryArtifactKey("testKeyId", new Version("1.2.3"));
 		IArtifactDescriptor descriptor = PublisherHelper.createArtifactDescriptor(key, null);
@@ -143,12 +143,8 @@ public class SimpleArtifactRepositoryTest extends AbstractProvisioningTest {
 
 	public void test_248772() {
 		SimpleArtifactRepositoryFactory factory = new SimpleArtifactRepositoryFactory();
-		URL location = null;
-		try {
-			location = new File(getTempFolder(), getUniqueString()).toURL();
-		} catch (MalformedURLException e) {
-			fail("1.0", e);
-		}
+		URI location = null;
+		location = new File(getTempFolder(), getUniqueString()).toURI();
 		factory.create(location, "test type", null, null);
 		try {
 			factory.load(location, new NullProgressMonitor());
