@@ -12,7 +12,7 @@ package org.eclipse.equinox.p2.tests.mirror;
 
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.HashMap;
 import java.util.Map;
 import org.eclipse.equinox.app.IApplicationContext;
@@ -60,11 +60,11 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 	 */
 	protected void tearDown() throws Exception {
 		//remove all the repositories
-		getManager().removeRepository(destRepoLocation.toURL());
-		getManager().removeRepository(sourceRepoLocation.toURL());
-		getManager().removeRepository(sourceRepo2Location.toURL());
-		getManager().removeRepository(sourceRepo3Location.toURL());
-		getManager().removeRepository(sourceRepo4Location.toURL());
+		getManager().removeRepository(destRepoLocation.toURI());
+		getManager().removeRepository(sourceRepoLocation.toURI());
+		getManager().removeRepository(sourceRepo2Location.toURI());
+		getManager().removeRepository(sourceRepo3Location.toURI());
+		getManager().removeRepository(sourceRepo4Location.toURI());
 
 		//delete the destination location (no left over files for the next test)
 		delete(destRepoLocation);
@@ -118,9 +118,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 	/**
 	 * runs mirror application with default arguments. source is the source repo, destination is the destination repo, append is if the "-append" argument is needed
 	 */
-	private void basicRunMirrorApplication(String message, URL source, URL destination, boolean append) throws Exception {
+	private void basicRunMirrorApplication(String message, URI source, URI destination, boolean append) throws Exception {
 		//set the default arguments
-		String[] args = new String[] {"-source", source.toExternalForm(), "-destination", destination.toExternalForm(), append ? "-append" : ""};
+		String[] args = new String[] {"-source", source.toString(), "-destination", destination.toString(), append ? "-append" : ""};
 		//run the mirror application
 		runMirrorApplication(message, args);
 	}
@@ -130,7 +130,7 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 	 */
 	private void runMirrorApplication(String message, File source, File destination, boolean append) {
 		try {
-			basicRunMirrorApplication(message, source.toURL(), destination.toURL(), append);
+			basicRunMirrorApplication(message, source.toURI(), destination.toURI(), append);
 		} catch (Exception e) {
 			fail(message, e);
 		}
@@ -157,11 +157,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//Setup ensure setup completes successfully
-			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepo2Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepo2Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail(message + ".2", e);
-		} catch (MalformedURLException e) {
-			fail(message + ".3", e);
 		}
 
 		//mirror test data
@@ -179,11 +177,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//Setup: verify contents
-			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail(message + ".2", e);
-		} catch (MalformedURLException e) {
-			fail(message + ".3", e);
 		}
 
 		//mirror test data
@@ -201,11 +197,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//Setup: verify contents
-			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail(message + ".2", e);
-		} catch (MalformedURLException e) {
-			fail(message + ".3", e);
 		}
 
 		//mirror test data
@@ -223,11 +217,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//Setup: verify
-			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepo3Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepo3Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail(message + ".2", e);
-		} catch (MalformedURLException e) {
-			fail(message + ".3", e);
 		}
 
 		//mirror duplicate data
@@ -245,11 +237,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//Setup: verify
-			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepo2Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals(message + ".1", getManager().loadRepository(sourceRepo2Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail(message + ".2", e);
-		} catch (MalformedURLException e) {
-			fail(message + ".3", e);
 		}
 
 		//Setup: populate destination with duplicate artifacts
@@ -257,12 +247,10 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//Setup: verify
-			assertContains(message + ".5", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
-			assertContains(message + ".6", getManager().loadRepository(sourceRepo2Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContains(message + ".5", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
+			assertContains(message + ".6", getManager().loadRepository(sourceRepo2Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail(message + ".7", e);
-		} catch (MalformedURLException e) {
-			fail(message + ".8", e);
 		}
 
 		//mirror duplicate data
@@ -276,20 +264,14 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 	private File artifactMirrorEmpty(String message, boolean append) {
 		//Setup: Create an empty repository
 		File emptyRepository = new File(getTempFolder(), getUniqueString());
-		try {
-			//Setup: remove repository if it exists
-			getManager().removeRepository(emptyRepository.toURL());
-		} catch (MalformedURLException e1) {
-			fail(message + ".0", e1);
-		}
+		//Setup: remove repository if it exists
+		getManager().removeRepository(emptyRepository.toURI());
 		//Setup: delete any data that may be in the folder
 		delete(emptyRepository);
 		try {
-			getManager().createRepository(emptyRepository.toURL(), "Empty Repository", IArtifactRepositoryManager.TYPE_SIMPLE_REPOSITORY, null);
+			getManager().createRepository(emptyRepository.toURI(), "Empty Repository", IArtifactRepositoryManager.TYPE_SIMPLE_REPOSITORY, null);
 		} catch (ProvisionException e) {
 			fail(message + ".1", e);
-		} catch (MalformedURLException e) {
-			fail(message + ".2", e);
 		}
 
 		runMirrorApplication(message + ".0", emptyRepository, destRepoLocation, append);
@@ -318,11 +300,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("1.1", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("1.1", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("1.2", e);
-		} catch (MalformedURLException e) {
-			fail("1.3", e);
 		}
 	}
 
@@ -337,11 +317,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("2.1", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("2.1", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("2.2", e);
-		} catch (MalformedURLException e) {
-			fail("2.3", e);
 		}
 	}
 
@@ -356,11 +334,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("3.1", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("3.1", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("3.2", e);
-		} catch (MalformedURLException e) {
-			fail("3.3", e);
 		}
 	}
 
@@ -375,11 +351,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("4.1", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("4.1", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("4.2", e);
-		} catch (MalformedURLException e) {
-			fail("4.3", e);
 		}
 	}
 
@@ -394,14 +368,12 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContains("5.1", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
-			assertContains("5.2", getManager().loadRepository(sourceRepo2Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContains("5.1", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
+			assertContains("5.2", getManager().loadRepository(sourceRepo2Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 			//checks that the destination has the correct number of keys (no extras)
-			assertEquals("5.3", getManager().loadRepository(sourceRepoLocation.toURL(), null).getArtifactKeys().length + getManager().loadRepository(sourceRepo2Location.toURL(), null).getArtifactKeys().length, getManager().loadRepository(destRepoLocation.toURL(), null).getArtifactKeys().length);
+			assertEquals("5.3", getManager().loadRepository(sourceRepoLocation.toURI(), null).getArtifactKeys().length + getManager().loadRepository(sourceRepo2Location.toURI(), null).getArtifactKeys().length, getManager().loadRepository(destRepoLocation.toURI(), null).getArtifactKeys().length);
 		} catch (ProvisionException e) {
 			fail("5.4", e);
-		} catch (MalformedURLException e) {
-			fail("5.5", e);
 		}
 	}
 
@@ -416,11 +388,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("6.1", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("6.1", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("6.2", e);
-		} catch (MalformedURLException e) {
-			fail("6.3", e);
 		}
 	}
 
@@ -435,11 +405,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("7.1", getManager().loadRepository(sourceRepo3Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("7.1", getManager().loadRepository(sourceRepo3Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("7.2", e);
-		} catch (MalformedURLException e) {
-			fail("7.3", e);
 		}
 	}
 
@@ -454,11 +422,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("8.1", getManager().loadRepository(sourceRepo3Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("8.1", getManager().loadRepository(sourceRepo3Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("8.2", e);
-		} catch (MalformedURLException e) {
-			fail("8.3", e);
 		}
 	}
 
@@ -473,11 +439,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("9.1", getManager().loadRepository(sourceRepo3Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("9.1", getManager().loadRepository(sourceRepo3Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("9.2", e);
-		} catch (MalformedURLException e) {
-			fail("9.3", e);
 		}
 	}
 
@@ -492,11 +456,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("10.1", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("10.1", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("10.2", e);
-		} catch (MalformedURLException e) {
-			fail("10.3", e);
 		}
 	}
 
@@ -511,14 +473,12 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContains("11.1", getManager().loadRepository(sourceRepo3Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
-			assertContains("11.2", getManager().loadRepository(sourceRepo2Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContains("11.1", getManager().loadRepository(sourceRepo3Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
+			assertContains("11.2", getManager().loadRepository(sourceRepo2Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 			//checks that the destination has the correct number of keys (no extras)
-			assertEquals("11.3", getManager().loadRepository(sourceRepo2Location.toURL(), null).getArtifactKeys().length + getManager().loadRepository(sourceRepo3Location.toURL(), null).getArtifactKeys().length, getManager().loadRepository(destRepoLocation.toURL(), null).getArtifactKeys().length);
+			assertEquals("11.3", getManager().loadRepository(sourceRepo2Location.toURI(), null).getArtifactKeys().length + getManager().loadRepository(sourceRepo3Location.toURI(), null).getArtifactKeys().length, getManager().loadRepository(destRepoLocation.toURI(), null).getArtifactKeys().length);
 		} catch (ProvisionException e) {
 			fail("11.4", e);
-		} catch (MalformedURLException e) {
-			fail("11.5", e);
 		}
 	}
 
@@ -533,11 +493,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("12.1", getManager().loadRepository(sourceRepo3Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("12.1", getManager().loadRepository(sourceRepo3Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("12.2", e);
-		} catch (MalformedURLException e) {
-			fail("12.3", e);
 		}
 	}
 
@@ -549,7 +507,7 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 		delete(invalidRepository);
 
 		try {
-			basicRunMirrorApplication("13.1", invalidRepository.toURL(), destRepoLocation.toURL(), true);
+			basicRunMirrorApplication("13.1", invalidRepository.toURI(), destRepoLocation.toURI(), true);
 			//we expect a provision exception to be thrown. We should never get here.
 			fail("13.0 ProvisionExpection not thrown");
 		} catch (ProvisionException e) {
@@ -565,10 +523,10 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 	public void testArtifactMirrorToInvalid() {
 		try {
 			//Setup: create a URL pointing to an unmodifiable place
-			URL invalidDestRepository = new URL("http://foobar.com/abcdefg");
+			URI invalidDestRepository = new URI("http://foobar.com/abcdefg");
 
 			//run the application with the modifiable destination
-			basicRunMirrorApplication("14.1", sourceRepoLocation.toURL(), invalidDestRepository, true);
+			basicRunMirrorApplication("14.1", sourceRepoLocation.toURI(), invalidDestRepository, true);
 			//we're expecting an UnsupportedOperationException so we should never get here
 			fail("14.0 UnsupportedOperationException not thrown");
 		} catch (UnsupportedOperationException e) {
@@ -589,8 +547,8 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//Setup: create a URL pointing to an unmodifiable place
-			URL invalidDestRepository = new URL("http://foobar.com/abcdefg");
-			basicRunMirrorApplication("15.1", invalidRepository.toURL(), invalidDestRepository, true);
+			URI invalidDestRepository = new URI("http://foobar.com/abcdefg");
+			basicRunMirrorApplication("15.1", invalidRepository.toURI(), invalidDestRepository, true);
 			//We expect the ProvisionException to be thrown
 			fail("15.0 ProvisionException not thrown");
 		} catch (ProvisionException e) {
@@ -611,22 +569,13 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("16.1", getManager().loadRepository(emptyRepository.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("16.1", getManager().loadRepository(emptyRepository.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("16.2", e);
-		} catch (MalformedURLException e) {
-			fail("16.3", e);
 		}
 
-		//Cleanup
-		try {
-			//remove the emptyRepository
-			getManager().removeRepository(emptyRepository.toURL());
-		} catch (MalformedURLException e1) {
-			//delete any leftover data
-			delete(emptyRepository);
-			fail("16.4", e1);
-		}
+		//remove the emptyRepository
+		getManager().removeRepository(emptyRepository.toURI());
 		//delete any left over data
 		delete(emptyRepository);
 	}
@@ -642,23 +591,14 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContains("17.1", getManager().loadRepository(emptyRepository.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
-			assertContentEquals("17.2", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContains("17.1", getManager().loadRepository(emptyRepository.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
+			assertContentEquals("17.2", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("17.3", e);
-		} catch (MalformedURLException e) {
-			fail("17.4", e);
 		}
 
-		//Cleanup
-		try {
-			//remove the empty repository
-			getManager().removeRepository(emptyRepository.toURL());
-		} catch (MalformedURLException e1) {
-			//delete any leftover data
-			delete(emptyRepository);
-			fail("17.5", e1);
-		}
+		//remove the empty repository
+		getManager().removeRepository(emptyRepository.toURI());
 		//remove any leftover data
 		delete(emptyRepository);
 	}
@@ -674,22 +614,13 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("18.1", getManager().loadRepository(emptyRepository.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("18.1", getManager().loadRepository(emptyRepository.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("18.2", e);
-		} catch (MalformedURLException e) {
-			fail("18.3", e);
 		}
 
-		//Cleanup
-		try {
-			//remove the empty repository
-			getManager().removeRepository(emptyRepository.toURL());
-		} catch (MalformedURLException e1) {
-			//delete any leftover data
-			delete(emptyRepository);
-			fail("18.4", e1);
-		}
+		//remove the empty repository
+		getManager().removeRepository(emptyRepository.toURI());
 		//delete any leftover data
 		delete(emptyRepository);
 	}
@@ -709,11 +640,9 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContentEquals("19.2", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContentEquals("19.2", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 		} catch (ProvisionException e) {
 			fail("19.3", e);
-		} catch (MalformedURLException e) {
-			fail("19.4", e);
 		}
 	}
 
@@ -732,14 +661,12 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 
 		try {
 			//verify destination's content
-			assertContains("20.2", getManager().loadRepository(sourceRepoLocation.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
-			assertContains("20.3", getManager().loadRepository(sourceRepo4Location.toURL(), null), getManager().loadRepository(destRepoLocation.toURL(), null));
+			assertContains("20.2", getManager().loadRepository(sourceRepoLocation.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
+			assertContains("20.3", getManager().loadRepository(sourceRepo4Location.toURI(), null), getManager().loadRepository(destRepoLocation.toURI(), null));
 			//checks that the destination has the correct number of keys (no extras)
-			assertEquals("20.4", getManager().loadRepository(sourceRepoLocation.toURL(), null).getArtifactKeys().length + getManager().loadRepository(sourceRepo4Location.toURL(), null).getArtifactKeys().length, getManager().loadRepository(destRepoLocation.toURL(), null).getArtifactKeys().length);
+			assertEquals("20.4", getManager().loadRepository(sourceRepoLocation.toURI(), null).getArtifactKeys().length + getManager().loadRepository(sourceRepo4Location.toURI(), null).getArtifactKeys().length, getManager().loadRepository(destRepoLocation.toURI(), null).getArtifactKeys().length);
 		} catch (ProvisionException e) {
 			fail("20.5", e);
-		} catch (MalformedURLException e) {
-			fail("20.6", e);
 		}
 	}
 
@@ -815,14 +742,12 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 		artifactMirrorToEmpty("24.0", true);
 
 		try {
-			IArtifactRepository sourceRepository = getManager().loadRepository(sourceRepoLocation.toURL(), null);
-			IArtifactRepository destinationRepository = getManager().loadRepository(destRepoLocation.toURL(), null);
+			IArtifactRepository sourceRepository = getManager().loadRepository(sourceRepoLocation.toURI(), null);
+			IArtifactRepository destinationRepository = getManager().loadRepository(destRepoLocation.toURI(), null);
 			assertEquals("24.1", sourceRepository.getName(), destinationRepository.getName());
 			assertRepositoryProperties("24.2", sourceRepository.getProperties(), destinationRepository.getProperties());
 		} catch (ProvisionException e) {
 			fail("24.3", e);
-		} catch (MalformedURLException e) {
-			fail("24.4", e);
 		}
 	}
 
@@ -835,24 +760,20 @@ public class ArtifactMirrorApplicationTest extends AbstractProvisioningTest {
 		Map properties = null; //default properties
 		try {
 			//create the repository and get the resulting properties
-			properties = getManager().createRepository(destRepoLocation.toURL(), name, IArtifactRepositoryManager.TYPE_SIMPLE_REPOSITORY, properties).getProperties();
+			properties = getManager().createRepository(destRepoLocation.toURI(), name, IArtifactRepositoryManager.TYPE_SIMPLE_REPOSITORY, properties).getProperties();
 		} catch (ProvisionException e) {
 			fail("25.0", e);
-		} catch (MalformedURLException e) {
-			fail("25.1", e);
 		}
 
 		//run the mirror application
 		artifactMirrorToEmpty("25.2", true);
 
 		try {
-			IArtifactRepository repository = getManager().loadRepository(destRepoLocation.toURL(), null);
+			IArtifactRepository repository = getManager().loadRepository(destRepoLocation.toURI(), null);
 			assertEquals("25.3", name, repository.getName());
 			assertRepositoryProperties("25.4", properties, repository.getProperties());
 		} catch (ProvisionException e) {
 			fail("25.5", e);
-		} catch (MalformedURLException e) {
-			fail("25.6", e);
 		}
 	}
 }
